# silentcipher

./: .gitignore  README.md  README_PYPI.md  pyproject.toml  requirements.txt
Models/: README.md
examples/: .gitignore
examples/SilentCipherStandaloneServer/: README.md  app.py  config.yaml  requirements.txt
examples/WaterMarkingWebsite/: README.md  config.json
examples/WaterMarkingWebsite/SERVER/: Readme.md  manage.py  requirements.txt
examples/WaterMarkingWebsite/SERVER/DemoServer/: asgi.py  settings.py  urls.py  wsgi.py
examples/WaterMarkingWebsite/SERVER/api/: urls.py  views.py
examples/WaterMarkingWebsite/SERVER/src/: user.py  utils.py
examples/WaterMarkingWebsite/silentcipherui/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
examples/WaterMarkingWebsite/silentcipherui/src/: index.html  styles.css
examples/WaterMarkingWebsite/silentcipherui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
examples/WaterMarkingWebsite/silentcipherui/src/app/decode/: decode-routing.module.ts  decode.module.ts  decode.page.html  decode.page.scss  decode.page.ts
examples/WaterMarkingWebsite/silentcipherui/src/app/guard/: auth.guard.ts
examples/WaterMarkingWebsite/silentcipherui/src/app/login/: login.module.ts  login.page.html  login.page.scss  (+1 more)
examples/WaterMarkingWebsite/silentcipherui/src/environments/: environment.prod.ts  environment.ts
examples/colab/: cli.py  demo.ipynb  demo.py
src/silentcipher/: __init__.py  model.py  server.py  stft.py
(+40 files in other folders)
