[project]
name = "silentcipher"
version = "1.0.3"
authors = [
  { name="Mayank Kumar Singh", email="mayank.a.singh@sony.com" },
]
description = "Artefact free robust high quality audio watermarking"
readme = "README_PYPI.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/sony/silentcipher"
Issues = "https://github.com/sony/silentcipher/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}